@@ -1,5 +1,8 @@
 Release Notes
 
+* 3/3/2016
+  * fixed maxEvents for zero event files
+
 * 2/25/2016
   * added allowInputLAN
 
